--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -123,7 +123,7 @@ proceedings:
   year: 2022
 
 - id: ""
-  authors: "Richard May, Christian Biermann, Jacob Krüger, Gunter Saake, and Thomas Leich"
+  author: "Richard May, Christian Biermann, Jacob Krüger, Gunter Saake, and Thomas Leich"
   title: "A Systematic Mapping Study of Security Concepts for Configurable Data Storages"
   booktitle: "International Systems and Software Product Line Conference (SPLC)"
   doi: ""
