--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -90,6 +90,15 @@ journals:
   
 proceedings:
 
+
+- id: ""
+  author: "Rand Alchokr, Rayed Haider, Yusra Shakeel, Thomas Leich, Gunter Saake, and Jacob Krüger"
+  title: "Forecasting Publication’s Success Using Machine Learning."
+  booktitle: "International Workshop on Bibliometric-Enhanced Information (BIR)"
+  doi: ""
+  publisher: "CEUR-WS.org"
+  year: 2023
+
 - id: ""
   author: "Rand Alchokr, Jacob Krüger, Yusra Shakeel, Gunter Saake, and Thomas Leich"
   title: "Peer-Reviewing and Submission Dynamics Around Top Software-Engineering Venues: A Juniors' Perspective."
