--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -1,5 +1,13 @@
 journals:
 
+- id: Assuncao2023MicroserviceEvolution
+  author: "Wesley K. G. Assunção, Jacob Krüger, Sébastien Mosser, and Sofiane Selaoui"
+  title: "How do Microservices Evolve? An Empirical Analysis of Changes in Open-Source Microservice Repositories."
+  journal: "Journal of Systems and Software"
+  pages: ""
+  doi: ""
+  year: 2023
+
 - id: Ananieva2022ConceptualModelExtension
   author: "Sofia Ananieva, Sandra Greiner, Timo Kehrer, Jacob Krüger, Thomas Kühn, Lukas Linsbauer, Sten Grüner, Anne Koziolek, Henrik Lönn, S. Ramesh, and Ralf Reussner"
   title: "A Conceptual Model for Unifying Variability in Space and Time: Rationale, Validation, and Illustrative Applications."
