--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -107,11 +107,19 @@ proceedings:
   year: 2023
 
 - id: ""
-  author: "Rand Alchokr, Jacob Krüger, Yusra Shakeel, Gunter Saake, and Thomas Leich"
-  title: "Peer-Reviewing and Submission Dynamics Around Top Software-Engineering Venues: A Juniors' Perspective."
-  booktitle: "Software Engineering (SE)"
+  author: "Rand Alchokr, Sanket Vikas Joshi, Gunter Saake, Thomas Leich, and Jacob Krüger"
+  title: "Investigating the Relation between Authors’ Academic Age and their Citations."
+  booktitle: "International Conference on Theory and Practice of Digital Libraries (TPDL)"
   doi: ""
-  publisher: "GI"
+  publisher: "Springer"
+  year: 2023
+
+- id: ""
+  author: "Rand Alchokr, Rayed Haider, Yusra Shakeel, Thomas Leich, Gunter Saake, and Jacob Krüger"
+  title: "Forecasting Publication’s Success Using Machine Learning."
+  booktitle: "International Workshop on Bibliometric-Enhanced Information (BIR)"
+  doi: ""
+  publisher: "CEUR-WS.org"
   year: 2023
 
 - id: ""
