--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -181,7 +181,7 @@ proceedings:
 - id: ""
   author: "Jacob Krüger and Regina Hebig"
   title: "To Memorize or to Document: A Survey of Developers’ Views on Knowledge Availability."
-  booktitle: "International Conference on on Product-Focused Software Process Improvement (PROFES)"
+  booktitle: "International Conference on Product-Focused Software Process Improvement (PROFES)"
   doi: ""
   publisher: "Springer"
   year: 2023
@@ -229,7 +229,7 @@ proceedings:
 - id: ""
   author: "Samar Saeed, Shahrzad Sheikholeslami, Jacob Krüger, and Regina Hebig"
   title: "What Data Scientists (Care to) Recall."
-  booktitle: "International Conference on on Product-Focused Software Process Improvement (PROFES)"
+  booktitle: "International Conference on Product-Focused Software Process Improvement (PROFES)"
   doi: ""
   publisher: "Springer"
   year: 2023
