--- a/_data/bib.yaml
+++ b/_data/bib.yaml
@@ -98,6 +98,14 @@ journals:
   
 proceedings:
 
+- id: May2024VulnerabilitiesMisconfigured
+  author: "Richard May, Christian Biermann, Xenia Marlene Zerweck, Kai Ludwig, Jacob Krüger, and Thomas Leich"
+  title: "Vulnerably (Mis)Configured? Exploring 10 Years of Developers' Q&As on Stack Overflow."
+  booktitle: "International Working Conference on Variability Modelling of Software-Intensive Systems (VaMoS)"
+  doi: ""
+  publisher: "ACM"
+  year: 2024
+
 - id: Alchokr2023ForcastingSuccess
   author: "Rand Alchokr, Rayed Haider, Yusra Shakeel, Thomas Leich, Gunter Saake, and Jacob Krüger"
   title: "Forecasting Publication’s Success Using Machine Learning."
